# pywebron

./: .gitignore  CLI_PLAN.md  Cargo.toml  README.en.md  README.md  package-lock.json  pyproject.toml
.codex/environments/: environment.toml
assets/: pywebron.html  pywebron.js  pywebron1.html  resize.js
assets/src/: index.css  index.html  index.js
builtins/: pywebron.html  pywebron.js
docs/: CACHE.md
frontend/dist_content/: README.md  index.html  package-lock.json  package.json
frontend/dist_content/src/: App.vue  main.js
frontend/dist_content/src/assets/: base.css  variables.css
frontend/dist_content/src/assets/themes/: README.md  mixins.css  variables.css
frontend/dist_content/src/components/: action_panel.vue  card_container.vue  console_viewer.vue  message_panel.vue  performance_chart.vue  toggle_switch.vue  window_header.vue  window_resizer.vue
frontend/dist_content/src/composables/: use_pywebron.js
frontend/html_content/: pywebron.html
pywebron/: __init__.py  configs.py  utils.py
pywebron/app/: handle.py  handler.py  invoke.py  router.py  stream.py  window.py  worker.py
pywebron/builtins/: pywebron.html  pywebron.js
pywebron/cli/: __init__.py  build.py  installer.py
rusts/: configs.rs  lib.rs  utils.rs
rusts/app/: dpi.rs  invoke.rs  stream.rs  window.rs  window.rs.orig
tests/: main copy.py  main.py  mutil_file_app.py  pywebron.html  single_file_app.py
tests/pythons/: main.py  test.py  tools.py
tests/pythons/routers/: __init__.py  chat_router.py  monitor_router.py  online_chat.py  quick_actions.py  shortcut_router.py  system_monitor.py  window_router.py
tests/routers/: online_chatbox.py  quick_shortcut.py  system_monitor.py  test.py  window_control.py
tests/uis/: pywebron.html
tests/uis/vues/: THEME_MIGRATION.md  THEME_SYSTEM.md  index.html  package-lock.json  package.json  vite.config.js
tests/uis/vues/src/: App.vue  main.js
tests/uis/vues/src/assets/: base.css  base.scss
tests/uis/vues/src/assets/themes/: _mixins.scss  _variables.scss  index.scss  variables.css
tests/uis/vues/src/components/: ChatRoom.vue  InvokePanel.vue  IoMonitor.vue  ResizeArea.vue  SystemMonitor.vue  TerminalLog.vue  ThemeDemo.vue  WindowHeader.vue  action_panel.vue  base_card.vue  card_container.vue  chat_room.vue  console_viewer.vue  invoke_panel.vue  io_monitor.vue  message_panel.vue  network_chart.vue  performance_chart.vue  resize_area.vue  system_monitor.vue  terminal_log.vue  theme_demo.vue  theme_showcase.vue  title_bar.vue  toggle_switch.vue  type_switch.vue  window_header.vue
tests/uis/vues/src/composables/: usePywebron.js  useTheme.js  use_pywebron.js
tests/utills/: test.py  tools.py
vues/: index.html  package.json
