[package]
name = "_pywebron_"
version = "1.0.0"
edition = "2021"

[lib]
name = "_pywebron_"
path = "rusts/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
pyo3 = { version = "*", features = ["extension-module", "multiple-pymethods", "experimental-async"] }
tao = "*"
wry = { version = "*", features = ["protocol", "transparent"] }

parking_lot = "*"
crossbeam = "*"
image = { version = "*", default-features = false, features = ["png", "jpeg", "ico"] }
dashmap = "*"
mimalloc = { version = "*", optional = true }
tokio = { version = "*", features = ["rt-multi-thread", "sync", "macros"] }
pyo3-async-runtimes = { version = "*", features = ["tokio-runtime"] }
http = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
pythonize = "*"
rfd = { version = "*", features = ["common-controls-v6"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "*", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "*"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
