[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pywebron"
version = "1.0.0"
description = "A Python desktop GUI library based on Rust and WebView"
authors = [
    { name = "xzp", email = "x-z-p@foxmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["gui", "webview", "python", "rust", "desktop"]
dependencies = [
    "psutil>=7.2.2",
]

[project.urls]
Homepage = "https://github.com/xzp-hub/pywebron.git"
Repository = "https://github.com/xzp-hub/pywebron.git"

[tool.maturin]
module-name = "pywebron._pywebron_"
features = ["pyo3/extension-module"]
bindings = "pyo3"
