[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pywebron"
version = "1.0.0"
description = "A Python desktop GUI library based on Rust and WebView"
authors = [
    { name = "xzp", email = "x-z-p@foxmail.com" }
]
maintainers = [
    { name = "xzp", email = "x-z-p@foxmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["gui", "webview", "python", "rust", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "psutil",
    "black>=23.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[project.urls]
Homepage = "https://github.com/xzp-hub/pywebron"
Documentation = "https://github.com/xzp-hub/pywebron#readme"
Repository = "https://github.com/xzp-hub/pywebron.git"
Issues = "https://github.com/xzp-hub/pywebron/issues"
Github = "https://github.com/xzp-hub/pywebron.git"
Gitee = "git@gitee.com:xiang-zhi-ping/pywebron.git"
Changelog = "https://github.com/xzp-hub/pywebron/releases"

[project.scripts]
pywebron = "pywebron.__main__:main"

[tool.maturin]
module-name = "pywebron._pywebron_"
features = ["pyo3/extension-module"]
bindings = "pyo3"
exclude = [
    "pywebron/builtins/pywebron.html",
    "pywebron/builtins/pywebron.png",
    "pywebron/builtins/pywebron.js",
    "**/__pycache__/*",
    "**/*.pyc",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313", "py314"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
